instructions.Instructions.scala.code
baisseBrosse()
leveBrosse()

droite()
baisseBrosse()
leveBrosse()

droite()
baisseBrosse()
leveBrosse()

reculer()
baisseBrosse()
leveBrosse()

reculer()
baisseBrosse()
leveBrosse()

gauche()
baisseBrosse()
leveBrosse()

gauche()
baisseBrosse()
leveBrosse()

avance()
baisseBrosse()
leveBrosse()

droite()
